Fix manual IP flow to use CC2 auth and improve discovery reliability
This fixes two related issues with CC2 printer setup:

1. Manual IP Flow Now Routes to CC2 Auth (Main Fix)
   - Refactored manual_ip step to first ask for IP only
   - Discovers printer type at provided IP
   - Routes to appropriate config based on printer type:
     * CC2 printers -> cc2_auth_check -> cc2_access_code_input
     * MQTT printers -> auto-configure
     * FDM printers -> fdm_options (proxy)
     * Resin printers -> resin_options (camera)
   - Preserves external_ip across all flows
   - Previously, CC2 printers found via manual IP skipped auth UI entirely

2. Broadcast Discovery Improvements
   - Increased timeout from 5s to 10s for slower networks
   - Added retry logic (2 attempts) for broadcast discovery
   - Bind to port 52700 for responses instead of ephemeral ports
   - Enhanced logging with diagnostic hints for network issues
   - Extract response processing to helper method for cleaner code
   - Skip duplicate responses from multiple retry attempts

3. Translation Updates
   - Updated manual_ip description to explain auto-detection
   - Removed proxy_enabled from initial manual IP form

Fixes issue where users taken to manual setup don't see CC2 auth flow.
Addresses timing/network issues causing broadcast discovery failures.

--- a/custom_components/elegoo_printer/translations/en.json
+++ b/custom_components/elegoo_printer/translations/en.json
@@ -53,10 +53,9 @@
       },
       "manual_ip": {
         "title": "Manual Setup",
-        "description": "For help with configuration, please see the project's GitHub page.",
+        "description": "Enter the IP address of your Elegoo printer. The integration will automatically detect the printer type and guide you through the appropriate setup steps.",
         "data": {
           "ip_address": "Printer IP Address",
-          "proxy_enabled": "Enable the proxy server",
           "external_ip": "External Address (optional, for advanced network setups)"
         },
         "data_description": {
